# hello-shell

./: .gitignore  .gitmodules  README.md  fuser.sh  man.sh  readme.md  snippets.sh
bat/: cmd.cmd  nslookup.cmd  tracert.cmd
examples/: readme.md
hello/: debug1.sh  eof1.sh  expect-ssh1.sh  fs1.sh  hello-array1.sh  hello-array2.sh  hello-array3.sh  hello-command1.sh  hello-debug2.sh  hello-expect-ll1.sh  hello-expect-ssh1.sh  hello-filename1.sh  hello-for2.sh  hello-fs1.sh  hello-function1.sh  hello-launch1.sh  hello-os1.ipynb  hello-password1.sh  hello-select1.sh  hello-signal1.sh  hello-sleep1.sh  hello-string1.sh  hello-tmout1.sh  hello-tmout2.sh  hello-var1.sh  hello-wait-for-a-ping-success1.sh  hello-wait-for-a-ping-success2.sh  input1.sh  install-protobuf.txt  lang-array1.sh  lang-for1.sh  lang-function1.sh  lang-function3.sh  lang-if1.sh  lang-select1.sh  lang-string1.sh  lang-until1.sh  lang-var1.sh  lang-while1.sh  os1.ipynb  (+4 more)
man/: apk.sh  appImage.sh  apt-dpkg.sh  architectures.md  awk.sh  cat-od-socat.sh  chmod-chown-chgrp.sh  chown-chmod.sh  content-type-MIME.sh  cp.sh  curl.sh  cut.sh  date-hwclock.sh  date.sh  dd.sh  dmesg-dmeventd-dmidecode-dmsetup-dmstats.sh  dns.sh  english.md  expect.sh  file.sh  find.sh  ftp-vsftpd-filezilla.sh  gdb.sh  git.sh  grep.sh  history-last-lastb.sh  history.sh  hosts-hostname.sh  i2c-tools-i2cset-i2cget.sh  (+94 more)
projects/cr/txjprotocolmodbustcp_cong/: CMakeLists.txt
tools/dupx/: Makefile.am  NEWS  dupx  dupx.spec
tools/redirect/dupx/: AUTHORS  ChangeLog  Makefile.in  README  configure  configure.ac  dupx.1  hello1.sh
(+1260 files in other folders)
